# be/docs/swagger.json
@@ -491,6 +491,116 @@
                     }
                 }
             }
+        },
+        "/ticket": {
+            "get": {
+                "description": "Get ticket",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ticket"
+                ],
+                "summary": "Get ticket",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ticket response",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TicketListResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create waiting ticket",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ticket"
+                ],
+                "summary": "Create waiting ticket",
+                "parameters": [
+                    {
+                        "description": "Waiting ticket data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TicketRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Waiting ticket response",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TicketListResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ticket/enums": {
+            "get": {
+                "description": "Get ticket enums",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ticket"
+                ],
+                "summary": "Get ticket enums",
+                "responses": {}
+            }
+        },
+        "/ticket/{id}": {
+            "delete": {
+                "description": "Delete ticket",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ticket"
+                ],
+                "summary": "Delete ticket",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Ticket id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ticket response",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TicketResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -724,6 +834,51 @@
                 }
             }
         },
+        "controllers.TicketListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Ticket"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.TicketRequest": {
+            "type": "object",
+            "required": [
+                "patient_id"
+            ],
+            "properties": {
+                "patient_id": {
+                    "type": "integer"
+                },
+                "updated_by": {
+                    "type": "integer"
+                }
+            }
+        },
+        "controllers.TicketResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.Ticket"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.UpdatePatientRequest": {
             "type": "object",
             "required": [
@@ -911,6 +1066,38 @@
                     "type": "string"
                 },
                 "salary": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "updated_by": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Ticket": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "number": {
+                    "type": "integer"
+                },
+                "patient": {
+                    "$ref": "#/definitions/models.Patient"
+                },
+                "patient_id": {
                     "type": "integer"
                 },
                 "status": {
